--- a/portfolio.html
+++ b/portfolio.html
@@ -318,6 +318,31 @@
             </li>
           </ul>
         </div>
+        <div class="subscribe-footer">
+          <p class="acapit-subcribe">Subscribe</p>
+          <ul class="subscribe-list">
+            <li>
+              <form name="subscribe-mail">
+                <label for="subscribes"> </label>
+                <input
+                  id="subscribes"
+                  type="email"
+                  name="email"
+                  class="subscribe-input"
+                  placeholder="E-mail"
+                />
+              </form>
+            </li>
+            <li>
+              <button type="submit" class="subcribe-button">
+                Subscribe
+                <svg width="24" height="24" class="subcribe-svg">
+                  <use href="./images/icons.svg#icon-Frame-3"></use>
+                </svg>
+              </button>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
