--- a/index.html
+++ b/index.html
@@ -421,8 +421,8 @@
         </div>
         <div class="subscribe-footer">
           <p class="acapit-subcribe">Subscribe</p>
-          <form name="subscribe-mail">
-            <label for="subscribes"> </label>
+          <form name="subscribe-mail" class="subscribe-form">
+            <label for="subscribes" class="subcribe-label"> </label>
             <input
               id="subscribes"
               type="email"
@@ -433,7 +433,7 @@
           </form>
           <button type="submit" class="subcribe-button">
             Subscribe
-            <svg width="24" height="24" class="subcribe-svg">
+            <svg width="24" height="24" class="subscribe-svg">
               <use href="./images/icons.svg#icon-Frame-3"></use>
             </svg>
           </button>
