--- a/index.html
+++ b/index.html
@@ -422,14 +422,15 @@
         <div class="subscribe-footer">
           <p class="acapit-subcribe">Subscribe</p>
           <form name="subscribe-mail" class="subscribe-form">
-            <label for="subscribes" class="subcribe-label"> </label>
-            <input
-              id="subscribes"
-              type="email"
-              name="email"
-              class="subscribe-input"
-              placeholder="E-mail"
-            />
+            <label for="subscribes" class="subcribe-label">
+              <input
+                id="subscribes"
+                type="email"
+                name="email"
+                class="subscribe-input"
+                placeholder="E-mail"
+              />
+            </label>
           </form>
           <button type="submit" class="subcribe-button">
             Subscribe
