--- a/portfolio.html
+++ b/portfolio.html
@@ -321,21 +321,22 @@
         <div class="subscribe-footer">
           <p class="acapit-subcribe">Subscribe</p>
           <form name="subscribe-mail" class="subscribe-form">
-            <label for="subscribes" class="subcribe-label"> </label>
-            <input
-              id="subscribes"
-              type="email"
-              name="email"
-              class="subscribe-input"
-              placeholder="E-mail"
-            />
+            <label for="subscribes" class="subcribe-label">
+              <input
+                id="subscribes"
+                type="email"
+                name="email"
+                class="subscribe-input"
+                placeholder="E-mail"
+              />
+            </label>
+            <button type="submit" class="subcribe-button">
+              Subscribe
+              <svg width="24" height="24" class="subscribe-svg">
+                <use href="./images/icons.svg#icon-Frame-3"></use>
+              </svg>
+            </button>
           </form>
-          <button type="submit" class="subcribe-button">
-            Subscribe
-            <svg width="24" height="24" class="subscribe-svg">
-              <use href="./images/icons.svg#icon-Frame-3"></use>
-            </svg>
-          </button>
         </div>
       </div>
     </footer>
