--- a/index.html
+++ b/index.html
@@ -451,61 +451,43 @@
         <p class="acapit-modal">
           Leave your contacts and we will call you back
         </p>
-        <div class="inputs">
-          <ul class="inputs-list">
-            <li>
-              <form style="margin-bottom: 8px" class="form">
-                <label for="inputes-1">Name</label>
-                <div class="svg-input">
-                  <svg class="icons-modal" width="18" height="18">
-                    <use
-                      href="./images/icons.svg#icon-person-black-18dp-1"
-                    ></use>
-                  </svg>
-                  <input id="inputes-1" type="text" name="name" />
-                </div>
-              </form>
-            </li>
-            <li>
-              <form style="margin-bottom: 8px">
-                <label for="inputes-2">Phone</label>
-                <div class="svg-input">
-                  <svg class="icons-modal" width="18" height="18">
-                    <use
-                      href="./images/icons.svg#icon-phone-black-18dp-1"
-                    ></use>
-                  </svg>
-                  <input id="inputes-2" type="tel" name="phone" />
-                </div>
-              </form>
-            </li>
-            <li>
-              <form style="margin-bottom: 8px">
-                <label for="inputes-3">Email</label>
-                <div class="svg-input">
-                  <svg class="icons-modal" width="18" height="18">
-                    <use
-                      href="./images/icons.svg#icon-email-black-18dp-1"
-                    ></use>
-                  </svg>
-                  <input id="inputes-3" type="email" name="email" />
-                </div>
-              </form>
-            </li>
-            <li>
-              <form style="margin-bottom: 8px">
-                <label for="inputes-4">Comment</label>
-                <div class="textarea">
-                  <textarea
-                    id="inputes-4"
-                    name="comments"
-                    placeholder="text input"
-                  ></textarea>
-                </div>
-              </form>
-            </li>
-          </ul>
-        </div>
+        <form style="margin-bottom: 8px" class="form">
+          <label for="inputes-1">Name</label>
+          <div class="svg-input">
+            <svg class="icons-modal" width="18" height="18">
+              <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
+            </svg>
+            <input id="inputes-1" type="text" name="name" />
+          </div>
+        </form>
+        <form style="margin-bottom: 8px">
+          <label for="inputes-2">Phone</label>
+          <div class="svg-input">
+            <svg class="icons-modal" width="18" height="18">
+              <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
+            </svg>
+            <input id="inputes-2" type="tel" name="phone" />
+          </div>
+        </form>
+        <form style="margin-bottom: 8px">
+          <label for="inputes-3">Email</label>
+          <div class="svg-input">
+            <svg class="icons-modal" width="18" height="18">
+              <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
+            </svg>
+            <input id="inputes-3" type="email" name="email" />
+          </div>
+        </form>
+        <form style="margin-bottom: 8px">
+          <label for="inputes-4">Comment</label>
+          <div class="textarea">
+            <textarea
+              id="inputes-4"
+              name="comments"
+              placeholder="text input"
+            ></textarea>
+          </div>
+        </form>
         <div class="check-box">
           <input
             type="checkbox"
