--- a/index.html
+++ b/index.html
@@ -461,58 +461,55 @@
                 name="user-name"
                 class="input"
               />
-              <svg class="icons-modal" width="18" height="18">
+              <svg class="icons-modal" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
           </div>
-        </form>
-        <form>
-          <div class="svg-input">
+          <div class="svg-input-icons">
             <label for="inputes-2" class="modal-label">Phone</label>
             <div class="svg-input-icons">
               <input id="inputes-2" type="tel" name="phone" class="input" />
-              <svg class="icons-modal" width="18" height="18">
+              <svg class="icons-modal" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
           </div>
-        </form>
-        <form>
-          <div class="svg-input">
+          <div class="svg-input-icons">
             <label for="inputes-3" class="modal-label">Email</label>
             <div class="svg-input-icons">
-              <input id="inputes-3" type="email" name="email" />
-              <svg class="icons-modal" width="18" height="18">
+              <input id="inputes-3" type="email" name="email" class="input" />
+              <svg class="icons-modal" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
           </div>
-        </form>
-        <form>
-          <div class="textarea"></div>
-          <label for="inputes-4">Comment</label>
+          <div class="textarea-div"></div>
+          <label for="user-comment" class="modal-label">Comment</label>
 
           <textarea
-            id="inputes-4"
-            name="comments"
-            placeholder="text input"
+            id="user-comment"
+            name="user-comment"
+            placeholder="Text input"
+            class="textarea"
           ></textarea>
+          <div class="check-box">
+            <input
+              type="checkbox"
+              id="user-privacy"
+              name="user-privacy"
+              value="true"
+              class="check-input"
+            />
+            <label for="user-privacy" class="check-label"
+              >I accept the terms and conditions of the
+              <span class="privacy-policy">Privacy Policy</span></label
+            >
+          </div>
         </form>
-        <div class="check-box">
-          <input
-            type="checkbox"
-            id="privacy-policy"
-            name="privacy-policy"
-            value="I accept the terms and conditions of the Privacy Policy"
-          />
-          <label for="privacy-policy">
-            <a class="privacy-policy">Privacy Policy</a></label
-          >
-        </div>
-        <div class="button-send-modal">
-          <button type="submit" class="button-send">Send</button>
-        </div>
+      </div>
+      <div class="button-send-modal">
+        <button type="submit" class="button-send">Send</button>
       </div>
     </div>
     <script src="./js/modal.js"></script>
