--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
               </svg>
             </div>
           </div>
-          <div class="svg-input-icons">
+          <div class="svg-input">
             <label for="inputes-2" class="modal-label">Phone</label>
             <div class="svg-input-icons">
               <input id="inputes-2" type="tel" name="phone" class="input" />
@@ -475,7 +475,7 @@
               </svg>
             </div>
           </div>
-          <div class="svg-input-icons">
+          <div class="svg-input">
             <label for="inputes-3" class="modal-label">Email</label>
             <div class="svg-input-icons">
               <input id="inputes-3" type="email" name="email" class="input" />
