--- a/index.html
+++ b/index.html
@@ -484,27 +484,27 @@
               </svg>
             </div>
           </div>
-          <div class="textarea-div"></div>
-          <label for="user-comment" class="modal-label">Comment</label>
-
-          <textarea
-            id="user-comment"
-            name="user-comment"
-            placeholder="Text input"
-            class="textarea"
-          ></textarea>
-          <div class="check-box">
-            <input
-              type="checkbox"
-              id="user-privacy"
-              name="user-privacy"
-              value="true"
-              class="check-input"
-            />
-            <label for="user-privacy" class="check-label"
-              >I accept the terms and conditions of the
-              <span class="privacy-policy">Privacy Policy</span></label
-            >
+          <div class="textarea-div">
+            <label for="user-comment" class="modal-label">Comment</label>
+            <textarea
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+              class="textarea"
+            ></textarea>
+            <div class="check-box">
+              <input
+                type="checkbox"
+                id="user-privacy"
+                name="user-privacy"
+                value="true"
+                class="check-input"
+              />
+              <label for="user-privacy" class="check-label"
+                >I accept the terms and conditions of the
+                <span class="privacy-policy">Privacy Policy</span></label
+              >
+            </div>
           </div>
         </form>
       </div>
