--- a/index.html
+++ b/index.html
@@ -502,15 +502,19 @@
               />
               <label for="user-privacy" class="check-label"
                 >I accept the terms and conditions of the
-                <span class="privacy-policy">Privacy Policy</span></label
+                <span class="privacy-policy">
+                  <svg class="privacy-policy-icons">
+                    <use href="./images/icons.svg#icon-Checkbox"></use>
+                  </svg>
+                  <a class="link-privacy">Privacy Policy</a>
+                </span></label
               >
             </div>
+            <button type="submit" class="button-send">Send</button>
           </div>
         </form>
       </div>
-      <div class="button-send-modal">
-        <button type="submit" class="button-send">Send</button>
-      </div>
+      <div class="button-send-modal"></div>
     </div>
     <script src="./js/modal.js"></script>
   </body>
