--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             <label for="user-privacy" class="check-label"
               >I accept the terms and conditions of the
               <span class="privacy-policy">
-                <svg class="privacy-policy-icons">
+                <svg width="10" height="8" class="privacy-policy-icons">
                   <use href="./images/icons.svg#icon-Checkbox"></use>
                 </svg>
                 <a class="link-privacy">Privacy Policy</a>
