--- a/index.html
+++ b/index.html
@@ -501,15 +501,17 @@
               value="true"
               class="check-input"
             />
-            <label for="user-privacy" class="check-label"
-              >I accept the terms and conditions of the
+            <label for="user-privacy" class="check-label">
               <span class="privacy-policy">
                 <svg width="10" height="8" class="privacy-policy-icons">
                   <use href="./images/icons.svg#icon-Checkbox"></use>
-                </svg>
-                <a class="link-privacy">Privacy Policy</a>
-              </span></label
-            >
+                </svg> </span
+              >I accept the terms and conditions of the<a
+                href=""
+                class="link-privacy"
+                >Privacy Policy</a
+              >
+            </label>
           </div>
           <button type="submit" class="button-send">Send</button>
         </form>
