--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
               id="user-privacy"
               name="user-privacy"
               value="true"
-              class="check-input"
+              class="check-input visually-hidden"
             />
             <label for="user-privacy" class="check-label">
               <span class="privacy-policy">
