--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             <label for="user-privacy" class="check-label">
               <span class="privacy-policy">
                 <svg width="10" height="8" class="privacy-policy-icons">
-                  <use href="./images/icons.svg#icon-Checkbox"></use>
+                  <use href="./images/icons.svg#icon-Property-1click"></use>
                 </svg> </span
               >I accept the terms and conditions of the<a
                 href=""
