--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
                 name="email"
                 class="subscribe-input"
                 placeholder="E-mail"
+                required
               />
             </label>
             <button type="submit" class="subcribe-button">
@@ -460,6 +461,7 @@
                 type="text"
                 name="user-name"
                 class="input"
+                required
               />
               <svg class="icons-modal" width="18" height="24">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
@@ -469,7 +471,13 @@
           <div class="svg-input">
             <label for="inputes-2" class="modal-label">Phone</label>
             <div class="svg-input-icons">
-              <input id="inputes-2" type="tel" name="phone" class="input" />
+              <input
+                id="inputes-2"
+                type="tel"
+                name="phone"
+                class="input"
+                required
+              />
               <svg class="icons-modal" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
@@ -478,7 +486,13 @@
           <div class="svg-input">
             <label for="inputes-3" class="modal-label">Email</label>
             <div class="svg-input-icons">
-              <input id="inputes-3" type="email" name="email" class="input" />
+              <input
+                id="inputes-3"
+                type="email"
+                name="email"
+                class="input"
+                required
+              />
               <svg class="icons-modal" width="18" height="24">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
@@ -500,11 +514,12 @@
               name="user-privacy"
               value="true"
               class="check-input visually-hidden"
+              required
             />
             <label for="user-privacy" class="check-label">
               <span class="privacy-policy">
                 <svg width="10" height="8" class="privacy-policy-icons">
-                  <use href="./images/icons.svg#icon-Property-1click"></use>
+                  <use href="./images/icons.svg#icon-checked"></use>
                 </svg> </span
               >I accept the terms and conditions of the<a
                 href=""
