--- a/portfolio.html
+++ b/portfolio.html
@@ -328,6 +328,7 @@
                 name="email"
                 class="subscribe-input"
                 placeholder="E-mail"
+                required
               />
             </label>
             <button type="submit" class="subcribe-button">
